--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 
                 <div id="introBox">
                     <h1>Menasi Ephrem</h1>
-                    <h2>Curious about everything; Excited to learn; Happy to fell</h2>
+                    <h2>Curious about everything; Excited to learn; Happy to fail;</h2>
 
                     
                         <ul id="linkBox">
